<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_pokedex"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".PokedexActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/pokeball"
                app:tint="#90FFFFFF" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/elige_un_pok_mon"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:scrollbarSize="6dp" />

            <ProgressBar
                android:id="@+id/loading_pokedex"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="94dp"
                android:indeterminate="true"
                android:indeterminateTint="@android:color/white"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:progressTint="@android:color/white"
                android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_fav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="10dp"
                        android:drawableStart="@drawable/ic_baseline_star_24"
                        android:drawableTint="#FFC107"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/pokemon_view"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:scaleType="fitXY" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:stretchColumns="0,1">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingBottom="10dp">

                            <TextView
                                android:id="@+id/nombre_pokemon"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_span="2"
                                android:gravity="center"
                                android:text="@string/nombre_pok_mon"
                                android:textSize="36sp"
                                android:textStyle="bold" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingBottom="10dp">

                            <TextView
                                android:id="@+id/altura_pokemon"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text=""
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/peso_pokemon"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text=""
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp">


                            <TextView
                                android:id="@+id/exp_pokemon"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_span="2"
                                android:gravity="center"
                                android:text=""
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </TableRow>

                    </TableLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="15dp"
                        android:stretchColumns="0,1">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp">

                            <TextView
                                android:id="@+id/tipo_pokemon"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_span="2"
                                android:gravity="center"
                                android:text="@string/tipo"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingBottom="10dp">

                            <com.google.android.material.chip.ChipGroup
                                android:id="@+id/type_chips"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_span="2" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp">

                            <TextView
                                android:id="@+id/fuerte_pokemon"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_span="2"
                                android:gravity="center"
                                android:text="@string/fuerte_contra"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingBottom="10dp">

                            <com.google.android.material.chip.ChipGroup
                                android:id="@+id/fuerte_chips"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_span="2" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp">

                            <TextView
                                android:id="@+id/debil_pokemon"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_span="2"
                                android:gravity="center"
                                android:text="@string/debil_contra"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingBottom="10dp">

                            <com.google.android.material.chip.ChipGroup
                                android:id="@+id/debil_chips"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_span="2" />
                        </TableRow>


                    </TableLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>